configuring embedded sdk

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,11 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenLocal()
+
         mavenCentral()
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
