--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,28 @@ dependencies {
 
     compile project(':animated-progress-bar')
 
+    //fillr
+    compile "com.android.support:support-v4:24.2.1"
+    compile 'com.android.support:multidex:1.0.1'
+    apt "org.androidannotations:androidannotations:3.1"
+    compile "org.androidannotations:androidannotations-api:3.1"
+    compile "com.google.android.gms:play-services:8.4.0"
+    compile('com.rengwuxian.materialedittext:library:2.0.3') {
+        exclude module: 'library'
+        exclude module: 'support-v4'
+    }
+    compile 'com.bugsnag:bugsnag-android:+'
+    compile('com.squareup.retrofit:retrofit:1.9.0') {
+        exclude module: 'okhttp'
+    }
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile "com.mixpanel.android:mixpanel-android:4.6.4"
+    compile 'com.android.support:design:24.2.1'
+    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'org.greenrobot:eventbus:3.0.0'
+    testCompile 'junit:junit:4.12'
+
+
     // memory leak analysis
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4'
