--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'com.getkeepsafe.dexcount'
+apply plugin: 'com.neenbedankt.android-apt'
+
 
 android {
     compileSdkVersion 23
@@ -68,6 +70,13 @@ dexcount {
 }
 
 dependencies {
+
+    compile(group: 'com.fillr', name: 'fillrcore', version: '3.1.5', ext: 'aar', classifier: 'fillrEmbeddedRelease') {
+        transitive true
+    }
+    //if it does not resolve the browser-sdk you may need to add this line as well.
+    //compile 'com.fillr:fillr-browser-sdk:2.4.5'
+    compile(group: 'com.fillr', name: 'fillr-browser-sdk', version: '2.4.5', ext: 'aar', classifier: 'fillrBrowserSdkPlusRelease')
 
     // support libraries
     compile 'com.android.support:palette-v7:23.3.0'
